--- a/M4 Skryaga Reanimation/gamedata/configs/items/weapons/w_m4_skryaga.ltx
+++ b/M4 Skryaga Reanimation/gamedata/configs/items/weapons/w_m4_skryaga.ltx
@@ -449,8 +449,8 @@ inv_weight                                         = 2.700
 
 item_visual				= dynamics\weapons\wpn_m4_skryaga\wpn_m4_skryaga_c-more_hud.ogf
 
-        aim_hud_offset_pos               = -0.050798, -0.003977, -0.023085
-        aim_hud_offset_pos_16x9          = -0.050798, -0.003977, -0.023085
+        aim_hud_offset_pos               = -0.050798, 0.006694, -0.023085
+        aim_hud_offset_pos_16x9          = -0.050798, 0.006694, -0.023085
         aim_hud_offset_rot               = 0.005531, -0.008603, 0
         aim_hud_offset_rot_16x9          = 0.005531, -0.008603, 0
 ;--------------------------------------------------------------------------------
@@ -806,22 +806,13 @@ hud					= wpn_m4_skryaga_t12_hud
 1icon_layer_x			= 105
 1icon_layer_y			= -2
 
-
-inv_weight                                         = 3.400
-scope_status                                       = 1
-scope_zoom_factor                                  = 90
-zoom_rotate_time                                   = 0.25
-scope_dynamic_zoom                                 = off
-
-scope_zoom_factor_alt             = 0
-
-use_alt_aim_hud                   = true
+	s3ds_reticle_size 	= 1.9
 
 [wpn_m4_skryaga_t12_hud]:wpn_m4_skryaga_hud
 
 item_visual				= dynamics\weapons\wpn_m4_skryaga\wpn_m4_skryaga_t12_hud.ogf
 
-        aim_hud_offset_pos               = -0.049473, 0.003256, -0.07627
-        aim_hud_offset_pos_16x9          = -0.049473, 0.003256, -0.07627
+        aim_hud_offset_pos               = -0.049642, 0.003202, -0.029111
+        aim_hud_offset_pos_16x9          = -0.049642, 0.003202, -0.029111
         aim_hud_offset_rot               = 0.004922, -0.013414, 0
         aim_hud_offset_rot_16x9          = 0.004922, -0.013414, 0
