--- a/M4 Skryaga Reanimation/gamedata/configs/items/weapons/w_m4_skryaga.ltx
+++ b/M4 Skryaga Reanimation/gamedata/configs/items/weapons/w_m4_skryaga.ltx
@@ -806,6 +806,8 @@ hud					= wpn_m4_skryaga_t12_hud
 1icon_layer_x			= 105
 1icon_layer_y			= -2
 
+inv_weight                                         = 2.515
+
 	s3ds_reticle_size 	= 1.9
 
 [wpn_m4_skryaga_t12_hud]:wpn_m4_skryaga_hud
