--- a/M4 Skryaga Reanimation/gamedata/configs/mod_system_zz_m4_skryaga.ltx
+++ b/M4 Skryaga Reanimation/gamedata/configs/mod_system_zz_m4_skryaga.ltx
@@ -1,3 +1,11 @@
+![wpn_m4_skryaga]
+lewd_lens_hide_enabled       = true
+lewd_lens_hide_bone          = lens
+lewd_lens_hide_delays        = 0.1,0
+lewd_lens_hide_aim_mode      = true, false, false
+
+![wpn_m4_skryaga_acog]
+        scope_zoom_factor                = 42.86
 ![wpn_m4_skryaga_acog_hud]
         aim_hud_offset_pos               = -0.050105, 0.000724, -0.061095
         aim_hud_offset_pos_16x9          = -0.050105, 0.000724, -0.061095
@@ -8,7 +16,9 @@
         gl_hud_offset_pos_16x9           = -0.067462, -0.045985, -0.006136
         gl_hud_offset_rot                = -0.076142, 0.010543, 0.117695
         gl_hud_offset_rot_16x9           = -0.076142, 0.010543, 0.117695
-		
+
+![wpn_m4_skryaga_triji]
+        scope_zoom_factor                = 42.86	
 ![wpn_m4_skryaga_triji_hud]
         aim_hud_offset_pos               = -0.050105, 0.000724, -0.061095
         aim_hud_offset_pos_16x9          = -0.050105, 0.000724, -0.061095
@@ -24,7 +34,11 @@
         gl_hud_offset_pos_16x9           = -0.067462, -0.045985, -0.006136
         gl_hud_offset_rot                = -0.076142, 0.010543, 0.117695
         gl_hud_offset_rot_16x9           = -0.076142, 0.010543, 0.117695
-		
+
+![wpn_m4_skryaga_specter]
+zoom_step_count=1
+        scope_zoom_factor                = 30
+		scope_dynamic_zoom               = on		
 ![wpn_m4_skryaga_specter_hud]
         aim_hud_offset_alt_pos           = -0.050754, -0.023869, -0.069756
         aim_hud_offset_alt_pos_16x9      = -0.050754, -0.023869, -0.069756
@@ -40,7 +54,11 @@
         gl_hud_offset_pos_16x9           = -0.066539, -0.046313, -0.060466
         gl_hud_offset_rot                = -0.076983, 0.0073, 0.117695
         gl_hud_offset_rot_16x9           = -0.076983, 0.0073, 0.117695
-		
+
+![wpn_m4_skryaga_spec_alt]
+zoom_step_count=1
+        scope_zoom_factor                = 30
+		scope_dynamic_zoom               = on		
 ![wpn_m4_skryaga_spec_alt_hud]
         aim_hud_offset_pos               = -0.04984, -0.00044, -0.065425
         aim_hud_offset_pos_16x9          = -0.04984, -0.00044, -0.065425
@@ -56,23 +74,29 @@
         gl_hud_offset_pos_16x9           = -0.066539, -0.046313, -0.060466
         gl_hud_offset_rot                = -0.076983, 0.0073, 0.117695
         gl_hud_offset_rot_16x9           = -0.076983, 0.0073, 0.117695
-		
+
+![wpn_m4_skryaga_leupold]
+        scope_zoom_factor                = 15
+		scope_dynamic_zoom               = on		
 ![wpn_m4_skryaga_leupold_hud]
-        aim_hud_offset_pos               = -0.050095, -0.001275, -0.013266
-        aim_hud_offset_pos_16x9          = -0.050095, -0.001275, -0.013266
-        aim_hud_offset_rot               = 0.002292, -0.012094, 0
-        aim_hud_offset_rot_16x9          = 0.002292, -0.012094, 0
+        aim_hud_offset_pos               = -0.050095, -0.001275, -0.01071
+        aim_hud_offset_pos_16x9          = -0.050095, -0.001275, -0.01071
+        aim_hud_offset_rot               = 0.001189, -0.012318, 0
+        aim_hud_offset_rot_16x9          = 0.001189, -0.012318, 0
 		
         gl_hud_offset_pos                = -0.064873, -0.085908, 0.078908
         gl_hud_offset_pos_16x9           = -0.064873, -0.085908, 0.078908
         gl_hud_offset_rot                = -0.214972, 0.018398, 0.117695
         gl_hud_offset_rot_16x9           = -0.214972, 0.018398, 0.117695
-		
+
+![wpn_m4_skryaga_mark8_rmr]
+        scope_zoom_factor                = 15
+		scope_dynamic_zoom               = on		
 ![wpn_m4_skryaga_mark8_rmr_hud]
-        aim_hud_offset_pos               = -0.050095, -0.001275, -0.013266
-        aim_hud_offset_pos_16x9          = -0.050095, -0.001275, -0.013266
-        aim_hud_offset_rot               = 0.002292, -0.012094, 0
-        aim_hud_offset_rot_16x9          = 0.002292, -0.012094, 0
+        aim_hud_offset_pos               = -0.050095, -0.001275, -0.01071
+        aim_hud_offset_pos_16x9          = -0.050095, -0.001275, -0.01071
+        aim_hud_offset_rot               = 0.001189, -0.012318, 0
+        aim_hud_offset_rot_16x9          = 0.001189, -0.012318, 0
 		
         aim_hud_offset_alt_pos           = -0.068627, -0.043591, -0.034057
         aim_hud_offset_alt_pos_16x9      = -0.068627, -0.043591, -0.034057
@@ -83,7 +107,10 @@
         gl_hud_offset_pos_16x9           = -0.064873, -0.085908, 0.078908
         gl_hud_offset_rot                = -0.214972, 0.018398, 0.117695
         gl_hud_offset_rot_16x9           = -0.214972, 0.018398, 0.117695
-		
+
+![wpn_m4_skryaga_pn23]
+        scope_zoom_factor                = 20
+		scope_dynamic_zoom               = on		
 ![wpn_m4_skryaga_pn23_hud]
         aim_hud_offset_pos               = -0.050113, -0.000552, -0.050693
         aim_hud_offset_pos_16x9          = -0.050113, -0.000552, -0.050693
@@ -94,7 +121,10 @@
         gl_hud_offset_pos_16x9           = -0.0663, -0.081076, 0.067533
         gl_hud_offset_rot                = -0.151152, 0.016774, 0.117695
         gl_hud_offset_rot_16x9           = -0.151152, 0.016774, 0.117695
-		
+
+![wpn_m4_skryaga_gauss_sight]
+        scope_zoom_factor                = 12
+		scope_dynamic_zoom               = on		
 ![wpn_m4_skryaga_gauss_sight_hud]
         aim_hud_offset_pos               = -0.049903, 0.002002, -0.064475
         aim_hud_offset_pos_16x9          = -0.049903, 0.002002, -0.064475
